画像リンクの修正

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </label>
             </div>
             <div class="text-center">
-                <img id="previewArea" class="rounded mx-auto d-blockd" src="http://via.placeholder.com/900x900">
+                <img id="previewArea" class="rounded mx-auto d-blockd" src="https://placehold.jp/900x900.png">
                 <div><canvas id="canvasItemHs" class="rounded" style="display: none;"></canvas></div>
                 <div><canvas id="canvasItemHc" class="rounded" style="display: none;"></canvas></div>
                 <div><canvas id="canvasItemVs" class="rounded" style="display: none;"></canvas></div>
@@ -148,7 +148,7 @@
                                     <th class="rounded">
                                         <div class="card" style="width: 112px;">
                                             <button id="templateBtn0" type="button" class="templateBtn btn rounded-square">
-                                                <img id="" class="rounded mx-auto d-blockd" style = "width: 88px; height: 88px;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/temp0.png?raw=true">
+                                                <img id="" class="rounded mx-auto d-blockd" style = "width: 88px; height: 88px;" src="https://raw.githubusercontent.com/wasabiPigg/outfitImgAutomation/refs/heads/master/img/temp0.png">
                                                 <div class="card-body">
                                                 <p class="card-text text-center" style="height: 3rem;"><small>アイテム角＆<br>横向き</small></p>
                                                 </div>
@@ -158,7 +158,7 @@
                                     <th class="rounded">
                                         <div class="card" style="width: 112px;">
                                             <button id="templateBtn1" type="button" class="templateBtn btn rounded-square">
-                                                <img class="rounded mx-auto d-blockd" style = "width: 88px; height: 88px;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/temp1.png?raw=true">
+                                                <img class="rounded mx-auto d-blockd" style = "width: 88px; height: 88px;" src="https://raw.githubusercontent.com/wasabiPigg/outfitImgAutomation/refs/heads/master/img/temp1.png">
                                                 <div class="card-body">
                                                 <p class="card-text text-center" style="height: 3rem;"><small>アイテム丸＆<br>横向き</small></p>
                                                 </div>
@@ -168,7 +168,7 @@
                                     <th class="rounded">
                                         <div class="card" style="width: 112px;">
                                             <button id="templateBtn2" type="button" class="templateBtn btn rounded-square">
-                                                <img id="" class="rounded mx-auto d-blockd" style = "width: 88px; height: 88px;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/temp2.png?raw=true">
+                                                <img id="" class="rounded mx-auto d-blockd" style = "width: 88px; height: 88px;" src="https://raw.githubusercontent.com/wasabiPigg/outfitImgAutomation/refs/heads/master/img/temp2.png">
                                                 <div class="card-body">
                                                 <p class="card-text text-center" style="height: 3rem;"><small>アイテム角＆<br>タテ向き</small></p>
                                                 </div>
@@ -178,7 +178,7 @@
                                     <th class="rounded">
                                         <div class="card" style="width: 112px;">
                                             <button id="templateBtn3" type="button" class="templateBtn btn rounded-square">
-                                                <img id="" class="rounded mx-auto d-blockd" style = "width: 88px; height: 88px;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/temp3.png?raw=true">
+                                                <img id="" class="rounded mx-auto d-blockd" style = "width: 88px; height: 88px;" src="https://raw.githubusercontent.com/wasabiPigg/outfitImgAutomation/refs/heads/master/img/temp3.png">
                                                 <div class="card-body">
                                                 <p class="card-text text-center" style="height: 3rem;"><small>アイテム丸＆<br>タテ向き</small></p>
                                                 </div>
@@ -249,22 +249,22 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/info1.PNG?raw=true">
+                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://raw.githubusercontent.com/wasabiPigg/outfitImgAutomation/refs/heads/master/img/info1.PNG">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/info2.PNG?raw=true">
+                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://raw.githubusercontent.com/wasabiPigg/outfitImgAutomation/refs/heads/master/img/info2.PNG">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/info3.PNG?raw=true">
+                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://raw.githubusercontent.com/wasabiPigg/outfitImgAutomation/refs/heads/master/img/info3.PNG">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/info4.PNG?raw=true">
+                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://raw.githubusercontent.com/wasabiPigg/outfitImgAutomation/refs/heads/master/img/info4.PNG">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/info5.PNG?raw=true">
+                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://raw.githubusercontent.com/wasabiPigg/outfitImgAutomation/refs/heads/master/img/info5.PNG">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/info6.PNG?raw=true">
+                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://raw.githubusercontent.com/wasabiPigg/outfitImgAutomation/refs/heads/master/img/info6.PNG">
                                 </div>
 
                             </div>
